# my_workspace/Cargo.toml
[workspace]
exclude = []
resolver = "2"
members = [ "channel","stepper"]


[workspace.package]
version = "0.0.1"
authors = ["Babuabel Wanyeki <bwanyeki12@gmail.com>"]
repository = "https://github.com/Babu12345/rusty_stepper"
edition = "2021"
rust-version = "1.77"

[profile.bench]
debug = true

[profile.release]
debug = false
opt-level = "s"
