# my_workspace/Cargo.toml
[workspace]
exclude = ["examples/esp32c3-example"]
resolver = "2"
members = ["stepper"]


[workspace.package]
version = "0.0.1"
authors = ["Babuabel Wanyeki <bwanyeki12@gmail.com>"]
repository = "https://github.com/Babu12345/rusty_stepper"
edition = "2021"
rust-version = "1.77"

[profile.bench]
debug = true

[profile.release]
# debug = false
# opt-level = "s"

codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 0                # Switch to 0 decrease debug size in production code which is considerable. 2 is the default.
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false